build_with_tflite_lib=false
chrome_pgo_phase=0
clang_use_chrome_plugins=false
disable_fieldtrial_testing_config=true
enable_hangout_services_extension=false
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
enable_widevine=true
exclude_unwind_tables=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
safe_browsing_mode=0
treat_warnings_as_errors=false
use_official_google_api_keys=false
use_unofficial_version_number=false
blink_symbol_level=0
enable_iterator_debugging=false
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
is_clang=true
is_debug=false
is_official_build=true
proprietary_codecs=true
symbol_level=0
use_kerberos=false
use_sysroot=false
enable_rust=true
blink_enable_generated_code_formatting=false
is_cfi=false
use_thin_lto=false
use_pulseaudio=true
link_pulseaudio=true
use_vaapi=true
use_ozone=true
enable_vr=false
enable_iterator_debugging=false
optimize_webui=true
use_gio=true
use_lld=true
use_cups=true
v8_enable_backtrace=true
